# Game-Engine

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GameEngine.vcxproj.filters  README.md  WinApi part2.sln  WinApi part2.vcxproj  WinApi part2.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
WinApi part2/x64/Debug/: WinApi part2.exe.recipe  fontloader.obj.enc  vc143.idb
WinApi part2/x64/Debug/WinApi part2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  WinApi part2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: Block.h  Camera2D.h  Entity.h  FontLoader.h  GameScene.h  MenuScene.h  Player.h  Rectangle.h  RoomGenerator.h  Scene.h  SceneManager.h  Texture.h  TextureLoader.h  Vector2.h
src/: Block.cpp  Camera2D.cpp  FontLoader.cpp  GameScene.cpp  MenuScene.cpp  Player.cpp  RoomGenerator.cpp  SceneManager.cpp  Texture.cpp  TextureLoader.cpp  main.cpp
src/Math/: Rectangle.cpp  Vector2.cpp
